--- a/css/_main_body.scss
+++ b/css/_main_body.scss
@@ -45,7 +45,16 @@ $cards-shadow: 0 0 5px .5px rgba($darker-color,.2);
         
         @media screen and (max-width: 520px) {
             font-size: .9rem;
-            line-height: 1.2 rem;
+            line-height: 2rem;
+            top: .5rem;
+            padding: 0;
+        }
+
+        @media screen and (max-width: 320px) {
+            font-size: .9rem;
+            line-height: 1rem;
+            top: .5rem;
+            padding: 0;
         }
     }
 
@@ -61,7 +70,12 @@ $cards-shadow: 0 0 5px .5px rgba($darker-color,.2);
 
         @media screen and (max-width: 520px) {
             font-size: .9rem;
-            line-height: 1rem;
+            line-height: 1.6rem;
+            padding: .2rem;
+        }
+
+        @media screen and (max-width: 440px) {
+            top: 3.2em;
         }
     }
 
@@ -69,6 +83,10 @@ $cards-shadow: 0 0 5px .5px rgba($darker-color,.2);
         max-width: 100%;
         display: inline-block;
         filter: brightness(.4);
+
+        @media screen and (max-width: 440px) {
+            height: 10em;
+        }
     }
 }
 
@@ -87,7 +105,10 @@ $cards-shadow: 0 0 5px .5px rgba($darker-color,.2);
 
     @media screen and (max-width: 740px) {
         margin: 2em;
-        
+    }
+
+    @media screen and (max-width: 400px) {
+        margin: .5em;
     }
 }
 
@@ -104,6 +125,10 @@ $cards-shadow: 0 0 5px .5px rgba($darker-color,.2);
         justify-content: center;
         margin: 0;
         width: 80%;
+    }
+
+    @media screen and (max-width: 400px) {
+        width: 100%;
     }
 
     div {
@@ -216,7 +241,6 @@ $cards-shadow: 0 0 5px .5px rgba($darker-color,.2);
         justify-content: center;
         align-items: center;
         width: 100%;
-        
     }
     
     .upper-container {
@@ -237,7 +261,6 @@ $cards-shadow: 0 0 5px .5px rgba($darker-color,.2);
             gap: 2em;
             flex-flow: column wrap;
         }
-
         
         div {
             label {
@@ -289,6 +312,10 @@ $cards-shadow: 0 0 5px .5px rgba($darker-color,.2);
         justify-content: space-evenly;
         flex-flow: row wrap;
         gap: 2em;
+
+        @media screen and (max-width: 450px) {
+            gap: .5em;
+        }
 
         .card-container {
             display: flex;
