--- a/css/main.css
+++ b/css/main.css
@@ -1062,7 +1062,7 @@ footer {
 }
 
 body {
-  font-family: Montserrat, sans-serif;
+  font-family: 'Montserrat', sans-serif;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
